// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevicesChart when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_device_category"
    >
      Devices
    </a>
  </div>
  <figure
    id="chart_device_types"
  >
    <div
      class="data chart__bar-chart text--capitalize"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          mobile
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          54.4%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 54%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          desktop
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          44%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 44%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          tablet
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.3%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Smart TV
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          (other)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`DevicesChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_device_category"
    >
      Devices
    </a>
  </div>
  <figure
    id="chart_device_types"
  >
    <div
      class="data chart__bar-chart text--capitalize"
    />
  </figure>
</DocumentFragment>
`;

exports[`DevicesChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_device_category"
    >
      Devices
    </a>
  </div>
  <figure
    id="chart_device_types"
  >
    <div
      class="data chart__bar-chart text--capitalize"
    />
  </figure>
</DocumentFragment>
`;
